other-mpol/inject-kata-cc-runtime/.kyverno-test/exception-resource.yaml
apiVersion: v1
kind: Pod
metadata: {name: exception-pod, namespace: team-a, labels: {coco: enabled}}
spec: {containers: [{name: app, image: nginx:latest}]}
