other-mpol/inject-kata-cc-runtime/.kyverno-test/exception.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata: {name: exception, namespace: policy-exceptions}
spec:
  policyRefs: [{name: inject-kata-cc-runtime, kind: MutatingPolicy}]
  matchConditions: [{name: exact, expression: object.metadata.namespace == 'team-a' && object.metadata.name == 'exception-pod'}]
